Fix overview state bugs and update overview donations events overflow styling

--- a/frontend/src/styles/Dashboard/Overview.css
+++ b/frontend/src/styles/Dashboard/Overview.css
@@ -85,7 +85,7 @@
   flex-direction: column;
   gap: var(--gap-md);
   flex-grow: 1;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 /* OVERVIEW - RECENT DONATION */
